--- a/index.html
+++ b/index.html
@@ -1,7 +1,81 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+    <title>Michael Tortora</title>
+</head>
+
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <header>
+        <h1>Michael Tortora</h1>
+        <h4>Portfolio of AutoDesk Civil3D 2017 Drawings</h4>
+    </header>
+
+    <main>
+        <section>
+            <article>
+                <header>
+                    <h2>lAB 1</h2>
+                </header>
+                <p>
+                    <a href="https://github.com/tortoram/AutoDesk-Civil3D-2017/tree/master/1)%20Title%20Blocks">
+							TITLE BLOCKS
+				    </a>
+                </p>
+            </article>
+        </section>
+        <section>
+            <article>
+                <header>
+                    <h2>LAB 2</h2>
+                </header>
+                <p>
+                    <a href="https://github.com/tortoram/AutoDesk-Civil3D-2017/tree/master/2)%20Boundry%20Plan">
+							PROPERTY BOUNDRY PLAN
+				    </a>
+                </p>
+            </article>
+        </section>
+        <section>
+            <article>
+                <header>
+                    <h2>LAB 3</h2>
+                </header>
+                <p>
+                    <a href="https://github.com/tortoram/AutoDesk-Civil3D-2017/tree/master/3)%20Foundation%20Plan">
+							FOUNDATION PLAN
+				    </a>
+                </p>
+            </article>
+        </section>
+        <section>
+            <article>
+                <header>
+                    <h2>LAB 4</h2>
+                </header>
+                <p>
+                    <a href="https://github.com/tortoram/AutoDesk-Civil3D-2017/tree/master/4A)%20Road%20Profile">
+							ROAD PROFILE
+				    </a>
+                   <a href="https://github.com/tortoram/AutoDesk-Civil3D-2017/tree/master/4B)%20Soil%20Profile">
+							SOIL PROFILE
+				    </a>
+                </p>
+            </article>
+        </section>
+        <section>
+            <article>
+                <header>
+                    <h2>LAB 5</h2>
+                </header>
+                <p>
+                    <a href="https://github.com/tortoram/AutoDesk-Civil3D-2017/tree/master/5)%20Foundation%20Detail">
+							FOUNDATION DETAIL
+				    </a>
+                </p>
+            </article>
+        </section>
+    </main>
 </body>
+
 </html>
