--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <section>
             <article>
                 <header>
-                    <h2>lAB 1</h2>
+                    <h2>LAB 1</h2>
                 </header>
                 <p>
                     <a href="https://github.com/tortoram/AutoDesk-Civil3D-2017/tree/master/1)%20Title%20Blocks">
