--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Michael Tortora</title>
 </head>
 
@@ -57,7 +58,7 @@
                     <a href="https://github.com/tortoram/AutoDesk-Civil3D-2017/tree/master/4A)%20Road%20Profile">
 							ROAD PROFILE
 				    </a>
-                    <br><br>
+                    <br>
                     <a href="https://github.com/tortoram/AutoDesk-Civil3D-2017/tree/master/4B)%20Soil%20Profile">
 							SOIL PROFILE
 				    </a>
