--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 <body>
     <header>
         <h1>Michael Tortora</h1>
-        <h4>AutoDesk Civil3D 2017 Portfolio</h4>
+        <h4>
+            <a   href="https://github.com/tortoram/AutoDesk-Civil3D-2017">
+            AutoDesk Civil3D 2017 Portfolio
+            </a>
+        </h4>
+        
     </header>
 
     <main>
